Change up some org-roam bindings, add python-mode

--- a/init.org
+++ b/init.org
@@ -118,6 +118,7 @@ Calling EMACS an editor is like calling the Earth a hunk of dirt.
   - [[#crux][Crux]]
   - [[#neuron-mode][Neuron mode]]
   - [[#ripgrep][Ripgrep]]
+  - [[#generate-uuids][Generate UUIDs]]
   - [[#scratchpad][Scratchpad]]
 
 ** Package manager
@@ -690,7 +691,10 @@ For inserting code snippets (with ~<s~ for example)
 
 #+begin_src elisp
 (use-package org-tempo
-  :after org)
+  :after org
+  :config
+  ;; Add a =<el= shortcut for an elisp snippet
+  (add-to-list 'org-structure-template-alist '("el" . "src elisp")))
 #+end_src
 
 Disable line numbers in org-mode
@@ -905,21 +909,43 @@ The notes (zettelkasten) god
 
 #+begin_src elisp
 (use-package org-roam
-  ;;:straight (:host github :repo "org-roam/org-roam" :branch "master")
   :straight t
   :init
   (setq org-roam-v2-ack t)
+  (setq my/daily-note-filename "%<%Y-%m-%d>.org"
+        my/daily-note-header "#+title: %<%Y-%m-%d %a>#+filetags:daily\n\n[[roam:%<%Y-%B>]]\n\n")
   :config
   (setq org-roam-directory "~/Nextcloud/org-roam")
   (setq org-roam-dailies-directory "daily/")
   (setq org-roam-completion-everywhere t)
 
   (setq org-roam-dailies-capture-templates
-      '(("d" "default" entry "* %<%I:%M %p>\n %?"
-         :if-new (file+head "%<%Y-%m-%d>.org" "#+title: %<%Y-%m-%d>\n"))))
+    `(("d" "default" plain
+      "* %?"
+      :if-new (file+head ,my/daily-note-filename
+                         ,my/daily-note-header)
+      :empty-lines 1)
+
+     ("j" "journal" plain
+      "** %<%I:%M %p>  :journal:\n\n%?\n\n"
+      :if-new (file+head+olp ,my/daily-note-filename
+                             ,my/daily-note-header
+                             ("Journal"))
+      :empty-lines 1)
+     ("m" "meeting" entry
+      "** %<%I:%M %p> - %^{Meeting Title}  :meeting:\n\n%?\n\n"
+      :if-new (file+head+olp ,my/daily-note-filename
+                             ,my/daily-note-header
+                             ("Meetings"))
+      :empty-lines 1)))
 
   (setq org-roam-capture-templates
-        '(("b" "book notes" plain
+        '(("d" "default" plain
+           "%?"
+           :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
+           :unnarrowed t)
+
+          ("b" "book notes" plain
            "\n* Source\n\nAuthor: %^{Author}\nTitle: ${title}\nYear: %^{Year}\n\n* Summary\n\n%?"
            :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
            :unnarrowed t)
@@ -1927,13 +1953,23 @@ or something.
   :straight t)
 #+end_src
 
-** Scratchpad
+** Generate UUIDs
 #+begin_src elisp
 (use-package uuidgen
-  :straight t)
+  :straight t
+  :config
+  (my/leader-keys
+    "u" 'uuidgen))
 #+end_src
-
-Add a =<el= shortcut for an elisp snippet
+** Scratchpad
 #+begin_src elisp
-(add-to-list 'org-structure-template-alist '("el" . "src elisp"))
+(use-package yankpad
+  :straight t
+  :defer 10
+  :init
+  (setq yankpad-file (concat org-directory "/yankpad.org"))
+  (my/leader-keys
+    "yi" 'yankpad-insert
+    "ye" 'yankpad-edit
+    "yc" 'yankpad-set-category))
 #+end_src
