--- a/init.org
+++ b/init.org
@@ -913,7 +913,7 @@ The notes (zettelkasten) god
   :init
   (setq org-roam-v2-ack t)
   (setq my/daily-note-filename "%<%Y-%m-%d>.org"
-        my/daily-note-header "#+title: %<%Y-%m-%d %a>#+filetags:daily\n\n[[roam:%<%Y-%B>]]\n\n")
+        my/daily-note-header "#+title: %<%Y-%m-%d %a>\n#+filetags:daily\n\n[[roam:%<%Y-%B>]]\n\n")
   :config
   (setq org-roam-directory "~/Nextcloud/org-roam")
   (setq org-roam-dailies-directory "daily/")
@@ -1952,7 +1952,6 @@ or something.
 (use-package rg
   :straight t)
 #+end_src
-
 ** Generate UUIDs
 #+begin_src elisp
 (use-package uuidgen
